WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
293744
FileSystemWritableFileStream::write should throw SyntaxError if data param is missing
https://bugs.webkit.org/show_bug.cgi?id=293744
Summary
FileSystemWritableFileStream::write should throw SyntaxError if data param is...
Sihui Liu
Reported
2025-05-29 10:44:16 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-05-29 10:49:59 PDT
<
rdar://problem/152249184
>
Sihui Liu
Comment 2
2025-05-29 10:50:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46054
EWS
Comment 3
2025-06-02 20:21:14 PDT
Committed
295730@main
(4b09192e1f08): <
https://commits.webkit.org/295730@main
> Reviewed commits have been landed. Closing PR #46054 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug