FileSystemWritableFileStream::write should throw SyntaxError if data param is missing https://bugs.webkit.org/show_bug.cgi?id=293744 rdar://problem/152249184

Reviewed by Per Arne Vollan.

To match the behavior in other browsers.

* LayoutTests/imported/w3c/web-platform-tests/fs/FileSystemWritableFileStream-write.https.any-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/fs/FileSystemWritableFileStream-write.https.any.worker-expected.txt:
* Source/WebCore/Modules/filesystemaccess/FileSystemWritableFileStream.h:
* Source/WebCore/Modules/filesystemaccess/FileSystemWritableFileStreamSink.cpp:
(WebCore::writeParamsFromChunk):

Canonical link: https://commits.webkit.org/295730@main