Source/WebCore/Modules/filesystemaccess/FileSystemWritableFileStream.h
@@ -43,7 +43,7 @@ public:
         WriteCommandType type;
         std::optional<uint64_t> size { };
         std::optional<uint64_t> position { };
-        std::optional<DataVariant> data;
+        std::optional<DataVariant> data { RefPtr<JSC::ArrayBufferView> { nullptr } };
     };
 
     using ChunkType = Variant<RefPtr<JSC::ArrayBufferView>, RefPtr<JSC::ArrayBuffer>, RefPtr<Blob>, String, WriteParams>;
